--- a/v355/content/diskussion.tex
+++ b/v355/content/diskussion.tex
@@ -6,17 +6,17 @@ für Messungen, welche im weiteren noch diskutiert werden. Nach dieser Einstellu
 die größte Kapazität noch sehr genau ist. Allerdings werden die Abweichungen mit sinkender Kapazität stetig größer. Die Abweichungen steigen bis auf $30.3\%$ für die geringste Kapazität an. Dies 
 kann an den in der Versuchsanleitung \cite{v355} beschriebenen systematischen Abweichungen liegen. Ein solcher Verlauf ist experimentell zu erwarten, da mit geringerer Kapazität 
 auch die Qualität des Schwingvorgangs abnimmt. Die Fundamentalfrequenzen wurden zuerst über die Lissajous-Figuren bestimmt. Bei der Frequenz $\nu^+$ fällt auf, dass der experimentelle Wert
-bei fallendem $C_k$ ansteigt. Nach Theorie sollte dieser allerdings konstant sein. Dies könnte an einem systematischen Fehler liegen, da sich eine Gerade zwischen der Resonanzfrequenz und der Frequenz
+bei fallendem $C_\text{K}$ ansteigt. Nach Theorie sollte dieser allerdings konstant sein. Dies könnte an einem systematischen Fehler liegen, da sich eine Gerade zwischen der Resonanzfrequenz und der Frequenz
 $\nu^-$ gebildet hat. Der Grund für das Auftreten dieser ist ungewiss. Eine weitere Fehlerquelle ist das händische Einstellen der Gerade. In einem kleinen Frequenzbereich um diese Gerade kann nur geraten werden, 
 welche die beste Frequenz ist. Außerdem unterliegt die Anzeige des Generators Schwankungen, weshalb die Frequenz nicht eindeutig abgelesen werden kann. Dennoch liegen alle Werte
 für $\nu^+$, mit Ausnahme dem der kleinsten Kapazität, in einem akzeptabelen Bereich mit relativen Abweichungen von $2.29\%$ bis $9.37\%$. Die experimentellen Werte für die Frequenz $\nu^-$ sind sehr 
 qualitativ, da alle Abweichungen kleiner als $0.42\%$ sind. Zuletzt wurden die Fundamentalfrequenzen mittels der Sweep-Funktion bestimmt. Durch diese Methode wurde die Frequenz $\nu^+$ mit einer 
 Abweichungen von $3.34\%$ bestimmt. Dieser Wert ist im Mittel besser als die Methode der Lissajous-Figuren, allerdings ist für die großen Kapazitäten
-$C_k$ die Lissajousmethode genauer. Für die Frequenz $\nu^-$ liegen die Abweichungen in einem Bereich von $1.64\%$ bis $4.46\%$. Die Abweichungen liegen alle in einem relativ kleinem Intervall. 
+$C_\text{K}$ die Lissajousmethode genauer. Für die Frequenz $\nu^-$ liegen die Abweichungen in einem Bereich von $1.64\%$ bis $4.46\%$. Die Abweichungen liegen alle in einem relativ kleinem Intervall. 
 Dies spricht für die Qualität der Werte. Für die Kapazität $1.01\, \unit{\nano\farad}$ war die Auflösung des Oszilloskops nicht ausreichend um den Wert abzulesen. Auch hier stellt sich heraus, 
 dass die Lissajous-Methode 
 genauer ist. Die Abweichungen sind unter anderem durch die Sweep-Funktion zu erklären. Diese wurde ursprünglich auf $20 \unit{\kilo\hertz}$ und $50 \unit{\kilo\hertz}$ eingestellt. 
 Diese Einstellung änderte sich allerdings im Verlauf der Messungen. Des Weiteren ist das optische Ablesen am Bildschirm des Oszilloskops grundlegend ungenau.
-
+Bei der Berechnung der Ströme ergeben sich für beide Fundamentalfrequenzen relative Abweichungen im Bereich von einigen 100 bis 1000 Prozenten. 
 
 Zusammenfassend bestätigen dennoch beide Methoden die Theorie, da die relativen Abweichungen alle im Rahmen der Messunsichherheit des Expermientes liegen.
