Kleinigkeiten für make und titelblatt

--- a/v203/v203.tex
+++ b/v203/v203.tex
@@ -1,11 +1,11 @@
 \input{header.tex}
 
-\subject{VERSUCH NUMMER}
-\title{TITEL}
+\subject{V203}
+\title{Verdampfungswärme und Dampfdruck-Kurve}
 \date{%
-  Durchführung: DATUM
+  Durchführung: 18.01.2022
   \hspace{3em}
-  Abgabe: DATUM
+  Abgabe: 25.01.2022
 }
 
 \begin{document}
