Durchführung du :goat:

--- a/lit.bib
+++ b/lit.bib
@@ -82,6 +82,13 @@
 	url          = {https://moodle.tu-dortmund.de/pluginfile.php/1884054/mod_resource/content/1/V101.pdf},
 }
 
+@online{v203,
+	title        = {V203 - Verdampfungswärme und Dampfdruck-Kurve},
+	organization = {TU Dortmund},
+	urldate      = {2022-01-19},
+	url          = {https://moodle.tu-dortmund.de/pluginfile.php/1712438/mod_resource/content/1/V203.pdf},
+}
+
 @book{Demtröder_Exp_P_1,
 	author       = {Professor Dr. Wolfgang Demtröder},
 	title        = {Experimentalphysik 1 Mechanik und Wärme},
