--- a/v203/content/auswertung.tex
+++ b/v203/content/auswertung.tex
@@ -70,8 +70,8 @@ in \autoref{fig:plot3} abgebildet.
 
 Die Regression mittels \textit{scipy} \cite{scipy} ergibt die Parameter
 \begin{align*}
-    a &= \qty{0.65 +- 0.11}{\per\cubic\kelvin} & b &= \qty{-669 +- 142}{\per\kelvin\squared} \\
-    c &= (2.29 \pm 0.6) \cdot 10^5 \unit{\per\kelvin}     & d &= (-2.62 \pm 0.86) \cdot 10^7. \\ 
+    a &= \qty{0.65 +- 0.11}{\pascal\per\cubic\kelvin} & b &= \qty{-669 +- 142}{\pascal\per\kelvin\squared} \\
+    c &= (2.29 \pm 0.6) \cdot 10^5 \unit{\pascal\per\kelvin}     & d &= (-2.62 \pm 0.86) \cdot 10^7 \unit{\pascal}. \\ 
 \end{align*}
 Diese Parameter liefern Gleichungen für den Druck $p(T) = aT^3 + bT^2 + cT + d$ und dessen Ableitung $\frac{\symup{d}p}{\symup{d}T}(T) = 3aT^2 + 2bT + c$, mit denen 
 sich die beiden Lösungen $L_+$ und $L_-$ in Abhängigkeit zur Temperatur darstellen lassen. Die so entstehenden Funktionen können den Abbildungen \ref{fig:plot3} und 
