eig alles feddig BREBRE SKRSKR :SHIT:

--- a/v203/content/diskussion.tex
+++ b/v203/content/diskussion.tex
@@ -1,2 +1,10 @@
 \section{Diskussion}
 \label{sec:Diskussion}
+Zunächst wird der Literaturwert \cite{Ingenieurwissen} der Verdampfungswärme mit dem expermientellen Wert verglichen. 
+\begin{align*}
+    L_\text{exp} &= \qty{40.47 +- 0.12}{\kilo\joule\per\mol} \\
+    L_\text{lit} &= \qty{40.66}{\kilo\joule\per\mol}
+\end{align*}
+Die Abweichung zum Literaturwert liegt bei circa $0.46\%$. Daher bestätigt dieses Experiment eindeutig den Literaturwert. 
+Betrachtet man die temperaturabhängige Verdampfungswärme fällt auf das sich mathematisch zwei Lösungen ergeben. Allerdings kann lediglich der Graph von $L_+$ als physikalisch sinnvoll angenommen
+werden, die Verdampfungswärme bei steigender Temperatur abnehmen muss. Dies wurde bereits im \autoref{sec:Theorie} erklärt. 
