--- a/v203/content/theorie.tex
+++ b/v203/content/theorie.tex
@@ -69,3 +69,10 @@ Temperaturgrenze der Dampfdruckkurve. Druch die Annahmen kann nun die Differenti
     \label{eqn:int}
     p = p_0\text{e}^{-\frac{L}{RT}}
 \end{equation}
+Da \autoref{eqn:int} nur noch von den Variablen $p$ und $T$ abhängt lässt sich diese Gleichung nach Variablen trennen. Daraus folgt dann 
+\begin{equation}
+    \label{eqn:gerade}
+    \text{ln}\left(\frac{p}{p_0}\right) = -\frac{L}{R}\frac{1}{T}.
+\end{equation}
+Diese Gleichung besitzt die Form einer Geradengleichung der Variablen $\text{ln}\left(\frac{p}{p_0}\right)$ und $\frac{1}{T}$ mit der Steigung $-\frac{L}{R}$. Daher kann aus \autoref{eqn:gerade} die 
+Verdampfungswärme $L$ bestimmt werden.
