--- a/v355/content/diskussion.tex
+++ b/v355/content/diskussion.tex
@@ -17,6 +17,6 @@ Dies spricht für die Qualität der Werte. Für die Kapazität $1.01\, \unit{\na
 dass die Lissajous-Methode 
 genauer ist. Die Abweichungen sind unter anderem durch die Sweep-Funktion zu erklären. Diese wurde ursprünglich auf $20 \unit{\kilo\hertz}$ und $50 \unit{\kilo\hertz}$ eingestellt. 
 Diese Einstellung änderte sich allerdings im Verlauf der Messungen. Des Weiteren ist das optische Ablesen am Bildschirm des Oszilloskops grundlegend ungenau.
-Bei der Berechnung der Ströme ergeben sich für beide Fundamentalfrequenzen relative Abweichungen im Bereich von einigen 100 bis 1000 Prozenten. 
-
+Bei der Berechnung der Ströme ergeben sich für beide Fundamentalfrequenzen relative Abweichungen von $\symup{\Delta}_\text{relativ} = \qty{100}{\percent}$ 
+(gerundet auf ganze Prozent).
 Zusammenfassend bestätigen dennoch beide Methoden die Theorie, da die relativen Abweichungen alle im Rahmen der Messunsichherheit des Expermientes liegen.
