--- a/v355/content/theorie.tex
+++ b/v355/content/theorie.tex
@@ -29,7 +29,7 @@ Aus \autoref{eqn:T_Iplus} und \autoref{eqn:T_Iminus} lassen sich die Schwingungs
     \nu^+ = \frac{1}{2\pi\sqrt{LC}}
 \end{equation}
 \begin{equation}
-    \label{T_num}
+    \label{eqn:T_num}
     \nu^- =  \frac{1}{2\pi\sqrt{L\left(\frac{1}{C}+\frac{2}{C_k}\right)^{-1}}}.
 \end{equation}
 Des Weiteren lassen sich aus \autoref{eqn:T_Iplus} und \autoref{eqn:T_Iminus} die Stomverläufe $I_1(t)$ und $I_2(t)$ aufstellen. Durch Addition und Subtraktion der beiden genannten Gleichungen 
@@ -73,15 +73,15 @@ Dabei ist $Z(\omega)$ durch
     Z(\omega) = \omega L - \frac{1}{\omega}\left(\frac{1}{C} + \frac{1}{C_\text{K}}\right)
 \end{equation*}
 definiert.
-Durch einsetzen der Gleichungen \eqref{eqn:T_nup} und \eqref{eqn:T_num} ergeben sich für die Ströme
+Durch Einsetzen der Gleichungen \eqref{eqn:T_nup} und \eqref{eqn:T_num} ergeben sich für die Ströme
 \begin{equation}
     \label{eqn:Ip_theo}
-    |I(\omega^+)| = \frac{1}{R\sqrt{4 + \frac{R^2C_\text{K}^2}{LC}}}
+    |I(\omega^+)| = \frac{U}{R\sqrt{4 + \frac{R^2C_\text{K}^2}{LC}}}
 \end{equation}
 und 
 \begin{equation}
     \label{eqn:Im_theo}
-    |I(\omega^-)| = \frac{1}{R\sqrt{4 + \frac{R^2C_\text{K}^2}{LC}\left(1 + \frac{C}{C_\text{K}}\right)}}.
+    |I(\omega^-)| = \frac{U}{R\sqrt{4 + \frac{R^2C_\text{K}^2}{LC}\left(1 + \frac{C}{C_\text{K}}\right)}}.
 \end{equation}
 \begin{figure}
     \centering
